codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_rename_suggestion_loading.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
▌ Rename thread
▌ Generating a title suggestion…
▌
▌ Current project title

enter confirm · esc back
